<?xml version="1.0"?>
<package format="2">
    <name>example</name>

    <version>0.0.1</version>

    <description>An example ROS Kinetic project using Catkin</description>

    <maintainer email="initialed85@gmail.com">Edward Beech</maintainer>

    <license>MIT</license>

    <url type="website">https://github.com/initialed85/ros-kinetic-catkin-example</url>

    <author email="initialed85@gmail.com">Edward Beech</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>rostest</build_depend>
    <build_depend>fastcdr</build_depend>
    <build_depend>fastrtps</build_depend>

    <test_depend>gtest</test_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>fastcdr</exec_depend>
    <exec_depend>fastrtps</exec_depend>

    <export>
    </export>
</package>
